--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
@@ -39,6 +40,7 @@
     "@sendgrid/mail": "^7.4.5",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "es6-shim": "^0.35.6",
     "nestjs-prisma": "^0.11.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -51,6 +53,7 @@
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
