--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
     "@nestjs/swagger": "^4.8.1",
     "@prisma/client": "^2.25.0",
     "@sendgrid/mail": "^7.4.5",
+    "@types/uuid": "^8.3.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "es6-shim": "^0.35.6",
+    "multer": "^1.4.2",
+    "nanoid": "^3.1.23",
     "nestjs-prisma": "^0.11.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -50,7 +53,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
@@ -60,6 +64,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/multer": "^1.4.6",
     "@types/node": "^14.14.36",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
