--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "es6-shim": "^0.35.6",
+    "jwt-decode": "^3.1.2",
     "multer": "^1.4.2",
     "nanoid": "^3.1.23",
     "nestjs-prisma": "^0.11.0",
