--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "apistore",
   "version": "0.0.1",
+  "engines": {
+    "node": "14.16.0"
+  },
   "description": "",
   "author": "",
   "private": true,
