--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,8 @@
     "baseUrl": "./",
     "incremental": true,
     "types": ["node"],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
   }
 }
