--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 DATABASE_URL=
 PORT=
-API_KEY =
+API_KEY_SENDGRID =
 JWT_SECRET=
 JWT_EXP =
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+AWS_BUCKET=
+PRESIGNED_EXPIRES_IN=
