--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
-    "types": ["node"],
+    "types": ["node", "jest"],
     "typeRoots": [
       "node_modules/@types"
     ],
